Fixed a bunch of spacings

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,8 +12,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+#root {
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -69,4 +71,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.page-container {
+
+  padding: min(50px, 2vw);
+  padding-bottom: 0px;
+  height: 100%;
+  
+  overflow-y: scroll;
 }
